k8s/apigw.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apigw-service
  annotations:
    description: API Gateway service.
spec:
  selector:
    tier: aggregation
    app: apigw
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: apigw-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: aggregation
      app: apigw
  template:
    metadata:
      labels:
        tier: aggregation
        app: apigw
    spec:
      containers:
      - name: apigw
        image: liemmn/dxc-zuul-server:microservices
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
