k8s/billing.yml
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  annotations:
    description: Billing service.
spec:
  selector:
    tier: service
    app: billing
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8890
      targetPort: 8890
      name: billing-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: service
      app: billing
  template:
    metadata:
      labels:
        tier: service
        app: billing
    spec:
      containers:
      - name: billing
        image: liemmn/dxc-billing-service:microservices
        ports:
          - containerPort: 8890
        readinessProbe:
          httpGet:
            path: /health
            port: 8890
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8890
          initialDelaySeconds: 30
          periodSeconds: 5
