k8s/subscription.yml
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
  annotations:
    description: Subscription service.
spec:
  selector:
    tier: service
    app: subscription
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8889
      targetPort: 8889
      name: subscription-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: service
      app: subscription
  template:
    metadata:
      labels:
        tier: service
        app: subscription
    spec:
      containers:
      - name: subscription
        image: liemmn/dxc-subscription-service:microservices
        imagePullPolicy: Always
        ports:
          - containerPort: 8889
        readinessProbe:
          httpGet:
            path: /health
            port: 8889
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8889
          initialDelaySeconds: 30
          periodSeconds: 5
