k8s/apigw-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            backend:
              serviceName: oauth2-service
              servicePort: 9999
          - path: /api(/|$)(.*)
            backend:
              serviceName: apigw-service
              servicePort: 8080
